fixes responsive issue with max-content being too large

--- a/src/_includes/content.css
+++ b/src/_includes/content.css
@@ -74,7 +74,7 @@
 .category {
   @media (min-width: 1020px) {
     display: grid;
-    grid-template-columns: 40% max-content;
+    grid-template-columns: 40% 1fr;
     grid-column-gap: 4rem;
     margin-bottom: 6rem;
   }
